Fixed layout issues on nav bar

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -49,13 +49,17 @@ body{
   border-left: thin solid #ffffff;
 }
 
+#tabs li.last {
+  border-right: thin solid #ffffff;
+}
+
 #tabs a {
   float: left;
   text-decoration: none;
   text-align: left;
   font-size: 17px;
   font-weight: 800;
-  padding: 15px 25px 0px 5px;
+  padding: 15px 25px 2px 5px;
   z-index: 5;
 }
 
